// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XUIToast should render a message when messages are passed as props 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  data-automationid={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  role="status"
>
  <p
    className="xui-toast--message"
    data-automationid={undefined}
  >
    Content
  </p>
</div>
`;

exports[`XUIToast should render a passed qaHook as an automation id 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  data-automationid="toast-example"
  onBlur={undefined}
  onFocus={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  role="status"
>
  <span>
    Content
  </span>
</div>
`;

exports[`XUIToast should render hidden 1`] = `
<div
  aria-hidden={true}
  className="xui-toast xui-toast-is-hidden xui-toast-layout"
  data-automationid={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  role="status"
>
  Toast Content
</div>
`;

exports[`XUIToast should render one message as a prop, one action as a prop 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  data-automationid={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  role="status"
>
  <p
    className="xui-toast--message"
    data-automationid={undefined}
  >
    Content
  </p>
  <div
    className="xui-actions xui-toast--actions"
    data-automationid={undefined}
  >
    <a
      aria-disabled={undefined}
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      data-automationid={undefined}
      disabled={false}
      href="javascript:void(0)"
      onClick={[Function]}
      onKeyDown={undefined}
      onKeyPress={[Function]}
      rel={undefined}
      role={undefined}
      tabIndex={0}
      target={undefined}
    >
      Action ONE
    </a>
  </div>
</div>
`;

exports[`XUIToast should render two actions as a prop, but not more than two 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  data-automationid={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  role="status"
>
  <p
    className="xui-toast--message"
    data-automationid={undefined}
  >
    Content
  </p>
  <div
    className="xui-actions xui-toast--actions"
    data-automationid={undefined}
  >
    <a
      aria-disabled={undefined}
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      data-automationid={undefined}
      disabled={false}
      href="javascript:void(0)"
      onClick={[Function]}
      onKeyDown={undefined}
      onKeyPress={[Function]}
      rel={undefined}
      role={undefined}
      tabIndex={0}
      target={undefined}
    >
      Action ONE
    </a>
    <a
      aria-disabled={undefined}
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      data-automationid={undefined}
      disabled={false}
      href="javascript:void(0)"
      onClick={[Function]}
      onKeyDown={undefined}
      onKeyPress={[Function]}
      rel={undefined}
      role={undefined}
      tabIndex={0}
      target={undefined}
    >
      Action TWO
    </a>
  </div>
</div>
`;

exports[`XUIToast should render using the XUIActions component under the hood when using the top level primaryActions and secondaryActions API 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  data-automationid={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  role="status"
>
  <p
    className="xui-toast--message"
    data-automationid={undefined}
  >
    Message as props, actions as individual props
  </p>
  <div
    className="xui-actions xui-toast--actions"
    data-automationid={undefined}
  >
    <a
      aria-disabled={undefined}
      className="xui-button xui-actions--primary xui-toast--action xui-button-borderless-main xui-button-small"
      data-automationid={undefined}
      disabled={false}
      href="javascript:void(0)"
      onClick={[Function]}
      onKeyDown={undefined}
      onKeyPress={[Function]}
      rel={undefined}
      role={undefined}
      tabIndex={0}
      target={undefined}
    >
      Action ONE
    </a>
    <a
      aria-disabled={undefined}
      className="xui-button xui-actions--secondary xui-toast--action xui-button-borderless-main xui-button-small"
      data-automationid={undefined}
      disabled={false}
      href="javascript:void(0)"
      onClick={[Function]}
      onKeyDown={undefined}
      onKeyPress={[Function]}
      rel={undefined}
      role={undefined}
      tabIndex={0}
      target={undefined}
    >
      Action TWO
    </a>
  </div>
</div>
`;

exports[`XUIToast should still be able to render actions as children, along with message props 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  data-automationid={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  role="status"
>
  <p
    className="xui-toast--message"
    data-automationid={undefined}
  >
    Message as props, actions as children
  </p>
  <div
    className="xui-actions xui-toast--actions"
    data-automationid={undefined}
  >
    <a
      aria-disabled={undefined}
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      data-automationid={undefined}
      disabled={false}
      href="javascript:void(0)"
      onClick={[Function]}
      onKeyDown={undefined}
      onKeyPress={[Function]}
      rel={undefined}
      role={undefined}
      tabIndex={0}
      target={undefined}
    >
      Action ONE
    </a>
    <a
      aria-disabled={undefined}
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      data-automationid={undefined}
      disabled={false}
      href="javascript:void(0)"
      onClick={[Function]}
      onKeyDown={undefined}
      onKeyPress={[Function]}
      rel={undefined}
      role={undefined}
      tabIndex={0}
      target={undefined}
    >
      Action TWO
    </a>
  </div>
</div>
`;

exports[`XUIToast should still be able to render messages as children, along with action props 1`] = `
<div
  aria-hidden={false}
  className="xui-toast xui-toast-layout"
  data-automationid={undefined}
  onBlur={undefined}
  onFocus={undefined}
  onMouseLeave={undefined}
  onMouseOver={undefined}
  role="status"
>
  <p
    className="xui-toast--message"
    data-automationid={undefined}
  >
    Message as child, actions as props
  </p>
  <div
    className="xui-actions xui-toast--actions"
    data-automationid={undefined}
  >
    <a
      aria-disabled={undefined}
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      data-automationid={undefined}
      disabled={false}
      href="javascript:void(0)"
      onClick={[Function]}
      onKeyDown={undefined}
      onKeyPress={[Function]}
      rel={undefined}
      role={undefined}
      tabIndex={0}
      target={undefined}
    >
      Action ONE
    </a>
    <a
      aria-disabled={undefined}
      className="xui-button xui-toast--action xui-button-borderless-main xui-button-small"
      data-automationid={undefined}
      disabled={false}
      href="javascript:void(0)"
      onClick={[Function]}
      onKeyDown={undefined}
      onKeyPress={[Function]}
      rel={undefined}
      role={undefined}
      tabIndex={0}
      target={undefined}
    >
      Action TWO
    </a>
  </div>
</div>
`;
